--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 <span><a>Freelance</a> : Available</span>
                                 <span><a>Phone</a> : +88 01751951268</span>
                                 <span><a>Email</a> : polashpk394@gmail.com</span>
-                                <span><a>Country</a> : India</span>
+                                <span><a>Country</a> : Bangladesh</span>
 
                             </div>
                         </div>
